<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:ignore="NestedWeights" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/reuse_design_question_buttons_ll"
        android:layout_margin="10dp"
        android:background="@drawable/stainless_steel_rounded_background"
        android:padding="3dp" >

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/snow_rounded_background" >

            <LinearLayout
                android:id="@+id/questionframe"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/snow_rounded_background"
                android:clickable="false"
                android:orientation="vertical"
                android:visibility="visible" >

                <TextView
                    style="@android:style/TextAppearance.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="3dp"
                    android:background="@drawable/black_rounded_top_background"
                    android:gravity="center"
                    android:text="@string/questionheading"
                    android:textColor="@color/snow" />

                <TextView
                    android:id="@+id/questiontext"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:gravity="left"
                    android:padding="5dp"
                    android:scrollbars="vertical"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/optionframe"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                 android:clickable="false"
                android:orientation="vertical"
                android:visibility="gone" >

                <TextView
                    style="@android:style/TextAppearance.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="3dp"
                    android:background="@drawable/black_rounded_top_background"
                    android:gravity="center"
                    android:text="@string/optionheading"
                    android:textColor="@color/snow" />

                <ScrollView
                    android:id="@+id/scrollViewOptions"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:padding="5dp"
                    android:scrollbars="vertical" >

                    <RadioGroup
                        android:id="@+id/radioGroupOptions"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:scrollbars="vertical"
                        android:showDividers="middle" >

                        <TextView
                            style="@android:style/TextAppearance.Small"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:gravity="left"
                            android:text="@string/optionAtext"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <RadioButton
                            android:id="@+id/radio_optionA"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:layout_marginTop="2dp"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                        <TextView
                            style="@android:style/TextAppearance.Small"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:gravity="left"
                            android:text="@string/optionBtext"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <RadioButton
                            android:id="@+id/radio_optionB"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:layout_marginTop="2dp"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                        <TextView
                            style="@android:style/TextAppearance.Small"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:gravity="left"
                            android:text="@string/optionCtext"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <RadioButton
                            android:id="@+id/radio_optionC"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:layout_marginTop="2dp"
                            android:textColor="@color/black"
                            android:textSize="15sp" />

                        <TextView
                            style="@android:style/TextAppearance.Small"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:gravity="left"
                            android:text="@string/optionDtext"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                        <RadioButton
                            android:id="@+id/radio_optionD"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="4dp"
                            android:layout_marginTop="2dp"
                            android:textColor="@color/black"
                            android:textSize="15sp" />
                    </RadioGroup>
                </ScrollView>
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/reuse_design_question_buttons_ll"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/linear_layout_buttons_background"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.1"
            android:gravity="center_horizontal" >

            <ImageView
                android:id="@+id/showquestion_iv"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:background="@drawable/question_button_background" />

            <Button
                android:id="@+id/showquestion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:text="@string/questionbuttontext"
                android:textColor="@color/snow"
                android:textSize="15sp" />
        </RelativeLayout>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:background="@android:color/black" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.1"
            android:gravity="center_horizontal"
            android:paddingRight="5dp" >

            <ImageView
                android:id="@+id/showoption_iv"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:background="@drawable/options_button_background" />

            <Button
                android:id="@+id/showoption"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:text="@string/optionbuttontext"
                android:textColor="@color/snow"
                android:textSize="15sp" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>