<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/stainless_steel_rounded_background"
    android:orientation="vertical"
    android:padding="2dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/snow_rounded_background"
        android:orientation="vertical"
        android:padding="2dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="fill_horizontal"
            android:orientation="horizontal"
            android:padding="5dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/make_a_note"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/black" />
        </LinearLayout>

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:background="@color/stainless_steel" />

        <ScrollView
            android:layout_width="280dp"
            android:layout_height="180dp"
            android:background="@drawable/snow_rounded_background" >

            <EditText
                android:id="@+id/make_note_dialog_et"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:ems="10"
                android:inputType="textMultiLine"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/black" >
            </EditText>
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <Button
                android:id="@+id/make_note_dialog_cancel_btn"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/stainless_steel_rounded_background"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/make_note_dialog_save_btn"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/mustard_rounded_background"
                android:text="@string/save" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>