<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:ignore="NestedWeights" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/reuse_description_buttons_ll"
        android:layout_margin="10dp"
        android:background="@drawable/stainless_steel_rounded_background"
        android:padding="3dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/snow_rounded_background"
            android:orientation="vertical" >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/snow_rounded_background" >

                <LinearLayout
                    android:id="@+id/helpframe"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/snow_rounded_background"
                    android:clickable="false"
                    android:orientation="vertical"
                    android:visibility="visible" >

                    <TextView
                        android:id="@+id/helpheadingtext"
                        style="@android:style/TextAppearance.Medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="3dp"
                        android:background="@drawable/black_rounded_top_background"
                        android:gravity="center"
                        android:text="@string/helpheading"
                        android:textColor="@color/snow" />

                    <TextView
                        android:id="@+id/help_text"
                        android:layout_width="match_parent"
                        android:layout_height="fill_parent"
                        android:clickable="false"
                        android:gravity="left"
                        android:padding="5dp"
                        android:scrollbars="vertical"
                        android:text="@string/implementation"
                        android:textColor="@color/black"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/descriptionframe"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:clickable="false"
                    android:orientation="vertical"
                    android:visibility="gone" >

                    <TextView
                        android:id="@+id/descriptionheadingtext"
                        style="@android:style/TextAppearance.Medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="3dp"
                        android:background="@drawable/black_rounded_top_background"
                        android:gravity="center"
                        android:text="@string/descriptionheadingtext"
                        android:textColor="@color/snow" />

                    <TextView
                        android:id="@+id/description_text"
                        android:layout_width="match_parent"
                        android:layout_height="fill_parent"
                        android:clickable="false"
                        android:gravity="left"
                        android:padding="5dp"
                        android:scrollbars="vertical"
                        android:text="@string/implementation"
                        android:textColor="@color/black"
                        android:textSize="15sp" />
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/reuse_description_buttons_ll"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/linear_layout_buttons_background"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.1"
            android:gravity="center_horizontal" >

            <ImageView
                android:id="@+id/showhelp_iv"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:background="@drawable/help_button_background" />

            <Button
                android:id="@+id/showhelp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:background="@android:color/transparent"
                android:text="@string/helpbuttontext"
                android:textColor="@color/snow"
                android:textSize="15sp" />
        </RelativeLayout>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:background="@android:color/black" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="0.1"
            android:gravity="center_horizontal" >

            <ImageView
                android:id="@+id/showdescription_iv"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:background="@drawable/details_button_background" />

            <Button
                android:id="@+id/showdescription"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:text="@string/descriptionbuttontext"
                android:textColor="@color/snow"
                android:textSize="15sp" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>